policies/kyverno/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: validate-non-root-user
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Running as root user is not allowed. Pods must have runAsNonRoot: true."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
          containers:
          - securityContext:
              runAsNonRoot: true
